@@ -143,6 +143,8 @@ Optimizations
 Bug Fixes
 ---------------------
 
+* GITHUB#9660: Throw and ArithmeticException when the offset overflows in a ByteBlockPool. (Stefan Vodita)
+
 * GITHUB#12388: JoinUtil queries were ignoring boosts. (Alan Woodward)
 
 Other
